[package]
name = "file_find"
version = "1.1.12"
edition = "2024"

[dependencies]
clap = "4.5.26" # at dev time
colored = "3.0.0"
csv = "1.3.1"
fs = "0.0.5"
jwalk = "0.8.1"
regex = "1.11.1"
serde = {version = "1.0.218", features = ["derive"]} 
serde_json = "1.0"
toml = "0.8.20"
crossbeam-channel = "0.5.15"
